--- a/css/main.css
+++ b/css/main.css
@@ -31,8 +31,7 @@
 
 @font-face {
   font-family: 'FontAwesome';
-  src: url("../fonts/font-awesome/FontAwesome.otf") format("opentype");
-  src: url("../fonts/font-awesome/fontawesome-webfont.eot") format("embedded-opentype"), url("../fonts/font-awesome/fontawesome-webfont.woff2") format("woff2"), url("../fonts/font-awesome/fontawesome-webfont.woff") format("woff"), url("../fonts/font-awesome/fontawesome-webfont.ttf") format("truetype");
+  src: local("Font Awesome"), local("FontAwesome"), url("../fonts/font-awesome/fontawesome-webfont.eot") format("embedded-opentype"), url("../fonts/font-awesome/fontawesome-webfont.woff2") format("woff2"), url("../fonts/font-awesome/fontawesome-webfont.woff") format("woff"), url("../fonts/font-awesome/fontawesome-webfont.ttf") format("truetype");
   font-weight: normal;
   font-style: normal; }
 
@@ -1088,8 +1087,7 @@ figure.code {
   margin-bottom: 40px;
   box-shadow: 3px 8px 29px -6px rgba(0, 0, 0, 0.5);
   transition: box-shadow 200ms ease-in-out;
-  cursor: pointer;
-  outline: none; }
+  cursor: pointer; }
   figure.code::before {
     content: "css";
     float: right;
@@ -1478,13 +1476,14 @@ span:target {
   margin: 1rem;
   background: rgba(228, 225, 228, 0.5); }
   .transform-wrap .trans-element {
-    width: 170px;
+    text-align: center;
+    width: 195px;
     height: 100px;
     line-height: 100px;
     margin: 0 auto;
-    transition: all 0.5s ease-in-out; }
+    transition: all 0.6s ease-in-out; }
 
-.one, .four, .seven, .ten {
+.one, .four, .seven, .sevenX, .sevenY, .ten {
   background: rgba(135, 86, 120, 0.4); }
 
 .one:hover {
@@ -1500,10 +1499,10 @@ span:target {
   background: rgba(255, 153, 0, 0.4); }
 
 .three:hover {
-  transform: translate(-20px, 20px); }
+  transform: translate(20px, 20px); }
 
 .four:hover {
-  transform: scaleX(-1); }
+  transform: scaleX(0.8); }
 
 .five:hover {
   transform: scaleY(1.2); }
@@ -1511,8 +1510,14 @@ span:target {
 .six:hover {
   transform: scale(1.2, 0.5); }
 
+.sevenX:hover {
+  transform: rotateX(180deg); }
+
+.sevenY:hover {
+  transform: rotateY(180deg); }
+
 .seven:hover {
-  transform: rotate(720deg); }
+  transform: rotate(180deg); }
 
 .eight:hover {
   transform: skewX(20deg); }
@@ -1521,7 +1526,7 @@ span:target {
   transform: skewY(-20deg); }
 
 .ten:hover {
-  transform: skew(-20deg, 20deg); }
+  transform: skew(20deg, -20deg); }
 
 .eleven:hover {
   transform: matrix(1.2, 0, 0.5, 1.2, 50, 0); }
@@ -1565,6 +1570,23 @@ span:target {
 .element-4 {
   background: #00E4F6;
   transform-origin: 50px 50px; }
+
+.animated_example {
+  border: 1px solid #ccc;
+  font-size: 0.9em;
+  padding: 10px;
+  width: 600px;
+  margin: 0 auto 150px; }
+  .animated_example .e {
+    background: #fc0;
+    box-sizing: border-box;
+    width: 190px;
+    padding: 10px;
+    margin: 5px 0;
+    transition: width 3s;
+    white-space: nowrap; }
+  .animated_example:hover .e {
+    width: 100%; }
 
 .scene {
   position: relative;
