--- a/scss/base/_fonts.scss
+++ b/scss/base/_fonts.scss
@@ -20,8 +20,8 @@
 
 @font-face {
   font-family: 'FontAwesome';
-  src: url('#{$fonts-path}font-awesome/FontAwesome.otf') format('opentype');
-  src: url('#{$fonts-path}font-awesome/fontawesome-webfont.eot') format('embedded-opentype'),
+  src: local('Font Awesome'), local('FontAwesome'),
+  url('#{$fonts-path}font-awesome/fontawesome-webfont.eot') format('embedded-opentype'),
   url('#{$fonts-path}font-awesome/fontawesome-webfont.woff2') format('woff2'),
   url('#{$fonts-path}font-awesome/fontawesome-webfont.woff') format('woff'),
   url('#{$fonts-path}font-awesome/fontawesome-webfont.ttf') format('truetype');
